--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         }
         .about .content_box{
             background: #162c3b;
+            background-size:100% 100%;
             padding: 100px;
             width: 50%;
         }
@@ -418,7 +419,9 @@ progress {
 
     .background{
         background: linear-gradient(145deg, #a6d7f5, #66b3e3) !important;
-    }
+        background-size:100% 100%;
+ }
+
 
     .form{
         border: none;
