--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ var swiper = new Swiper('.swiper-container', {
         <p class="txt">© 2020 | Theme designed by Ɱའ..ʀᴀʜʊʟ</p>
         <ul>
             <p class="txt">Follow_me:</p>
-            <li><i class='fab fa-github'></i></li>
+            <li><i class='fab fa-github'> <a href="www.github.com/iamrahul8"></a></i></li>
             <li><i class='fab fa-google'></i></li>
             <li><i class='fab fa-hackerrank'></i></li>
         </ul>
