--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
+        <script>
+ // Under maintainance
+  alert("This site is still under development process.\n New sections and designs will be added soon");
+
+</script>
     <script>
     // Created by rahul
 
